--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 spec
 .idea/
-musictheorpy/__pycache__/
-musictheorpy/console/__pycache__/
-musictheorpy/console/tests/__pycache__/
-musictheorpy/tests/__pycache__/
+musictheorpy/__pycache__/*
+musictheorpy/console/__pycache__/*
+musictheorpy/console/tests/__pycache__/*
+musictheorpy/tests/__pycache__/*
 *.egg-info
